--- a/Quiz-master/App/templates/create_quiz.html
+++ b/Quiz-master/App/templates/create_quiz.html
@@ -2,53 +2,62 @@
 
 <html>
  <head>
- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
- <!-- Optional theme -->
- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
- <!-- Latest compiled and minified JavaScript -->
- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
- <link href="{% static 'login/style.css' %}" rel="stylesheet"/>
- <link href="{% static 'https://fonts.googleapis.com/css?family=Ubuntu' %}" rel="stylesheet"/>
- <meta content="width=device-width, initial-scale=1" name="viewport"/>
- <link href="{% static 'path/to/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet"/>
- <title>
- QUIZ APP
- </title>
+    <!-- Połączenie z Bootstrap dla stylizacji -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- Opcjonalny motyw Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <!-- Najnowszy skompilowany i zminimalizowany JavaScript Bootstrap -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <!-- Połączenie z arkuszem stylów -->
+    <link href="{% static 'login/style.css' %}" rel="stylesheet"/>
+    <!-- Połączenie z Google Fonts w celu użycia niestandardowych czcionek -->
+    <link href="{% static 'https://fonts.googleapis.com/css?family=Ubuntu' %}" rel="stylesheet"/>
+    <!-- Zapewnienie responsywności strony na wszystkich urządzeniach -->
+    <meta content="width=device-width, initial-scale=1" name="viewport"/>
+    <!-- Połączenie z Font Awesome dla ikon -->
+    <link href="{% static 'path/to/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet"/>
+    <title>QUIZ APP</title>
  </head>
  <body>
  <div class="main">
-  <img src="{% static 'images/logo.png' %}" alt="Logo" class="logo" >
- <p align="center" class="sign">
- Create a Quiz
- </p>
- <center>
- <form class="form1" method="POST">
- {% csrf_token %}
- {% if messages %}
-<ul class="messages">
- {% for message in messages %}
- <li {% if message.tags %} class="{{ message.tags }}"{% endif %} style="color: rgba(225, 152, 0, 0.8);">{{ message }}</li>
- {% endfor %}
-</ul>
-{% endif %}
-<div class="spoko">
- Quiz Name:
- <input align="center" class="input-field" type="text" name="quiz_name" />
- <br>
- Quiz Description:
- <input align="center" class="input-field" type="text" name="quiz_description" />
- <br>
- Total Questions:
- <input align="center" class="input-field" type="number" name="total_questions" />
- <br>
-</div>
- <div class="guziki">
- <a href="dashboard" class="btn">Back</a><button class="btn" type="submit">Create Quiz </button>
- </div>
- </form>
- </center>
+     <!-- Wyświetlanie logo -->
+     <img src="{% static 'images/logo.png' %}" alt="Logo" class="logo">
+     <!-- Nagłówek tworzenia quizu -->
+     <p align="center" class="sign">Create a Quiz</p>
+     <center>
+     <!-- Formularz tworzenia quizu -->
+     <form class="form1" method="POST">
+         {% csrf_token %}
+         <!-- Wyświetlanie komunikatów o błędach, jeśli istnieją -->
+         {% if messages %}
+         <ul class="messages">
+             {% for message in messages %}
+             <li {% if message.tags %} class="{{ message.tags }}"{% endif %} style="color: rgba(225, 152, 0, 0.8);">{{ message }}</li>
+             {% endfor %}
+         </ul>
+         {% endif %}
+         <div class="spoko">
+             <!-- Pole dla nazwy quizu -->
+             Quiz Name:
+             <input align="center" class="input-field" type="text" name="quiz_name" />
+             <br>
+             <!-- Pole dla opisu quizu -->
+             Quiz Description:
+             <input align="center" class="input-field" type="text" name="quiz_description" />
+             <br>
+             <!-- Pole dla liczby pytań -->
+             Total Questions:
+             <input align="center" class="input-field" type="number" name="total_questions" />
+             <br>
+         </div>
+         <div class="guziki">
+             <!-- Przycisk powrotu do dashboardu -->
+             <a href="dashboard" class="btn">Back</a>
+             <!-- Przycisk tworzenia quizu -->
+             <button class="btn" type="submit">Create Quiz</button>
+         </div>
+     </form>
+     </center>
  </div>
  </body>
 </html>
