--- a/Quiz-master/App/templates/quiz_result.html
+++ b/Quiz-master/App/templates/quiz_result.html
@@ -2,14 +2,20 @@
 
 <html>
 <head>
+    <!-- Połączenie z Bootstrap dla stylizacji -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!-- Połączenie z Google Fonts w celu użycia niestandardowych czcionek -->
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+    <!-- Najnowszy skompilowany i zminimalizowany JavaScript Bootstrap -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" crossorigin="anonymous"></script>
+    <!-- Połączenie z arkuszem stylów -->
     <link href="{% static 'login/style.css' %}" rel="stylesheet"/>
+    <!-- Zapewnienie responsywności strony na wszystkich urządzeniach -->
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
+    <!-- Połączenie z Font Awesome dla ikon -->
     <link href="{% static 'path/to/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet"/>
     <title>QUIZ APP</title>
-        <style>
+    <style>
         .main {
             display: flex;
             justify-content: center;
@@ -20,10 +26,13 @@
 </head>
 <body>
     <div class="main">
+        <!-- Wyświetlanie nazwy quizu -->
         <p style="font-size: 44px; font-weight: bold;">{{ quiz.name }} - Result</p>
         <br>
+        <!-- Wyświetlanie wyniku quizu -->
         <p style="font-size: 22px;">Quiz finished! Your score: {{ score }} out of {{ total_questions }}</p>
         <br>
+        <!-- Przycisk powrotu do dashboardu -->
         <a href="{% url 'App:dashboard' %}" class="btn btn-primary">Back to Dashboard</a>
     </div>
 </body>
