--- a/Quiz-master/App/templates/register.html
+++ b/Quiz-master/App/templates/register.html
@@ -1,48 +1,52 @@
 {% load static %}
-
 <html>
  <head>
+  <!-- Dodanie ikony do strony -->
   <link rel="icon" type="image/png" href="{% static 'images/logo.png' %}">
- <link href="{% static 'login/style.css' %}" rel="stylesheet"/>
- <link href="{% static 'https://fonts.googleapis.com/css?family=Ubuntu' %}" rel="stylesheet"/>
- <meta content="width=device-width, initial-scale=1" name="viewport"/>
- <link href="{% static 'path/to/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet"/>
-   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
- <title>
- QUIZ APP
- </title>
+  <!-- Połączenie z arkuszem stylów dla strony rejestracji -->
+  <link href="{% static 'login/style.css' %}" rel="stylesheet"/>
+  <!-- Połączenie z Google Fonts w celu użycia niestandardowych czcionek -->
+  <link href="{% static 'https://fonts.googleapis.com/css?family=Ubuntu' %}" rel="stylesheet"/>
+  <!-- Zapewnienie responsywności strony na wszystkich urządzeniach -->
+  <meta content="width=device-width, initial-scale=1" name="viewport"/>
+  <!-- Połączenie z Font Awesome dla ikon -->
+  <link href="{% static 'path/to/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet"/>
+  <!-- Połączenie z Boxicons dla dodatkowych ikon -->
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <title>QUIZ APP</title>
  </head>
-
  <body>
  <div class="main">
-  <img src="{% static 'images/logo.png' %}" alt="Logo" class="logo" >
- <p align="center" class="sign" >
- Create Account
- </p>
- <form class="form1" method="POST">
- {% if messages %}
-<ul class="messages">
- {% for message in messages %}
- <li {% if message.tags %} class="{{ message.tags }}"{% endif %} style="color:rgba(225, 152, 0, 0.8);">{{ message }}</li>
- {% endfor %}
-</ul>
-{% endif %}
- {% csrf_token %}
-
-  <input class="input-field" placeholder="Username" name="username" type="text" style="font-size: larger;border-radius: 5em;"/>
-  <input class="input-field" placeholder="Email" name="email" type="email" style="font-size: larger;border-radius: 5em;"/>
-  <input class="input-field" placeholder="Password" name="password" type="password" style="font-size: larger; border-radius: 5em;"/>
-
-  <div style="margin-top: 10px;">
-   <button align="center" class="submit" type="submit" style="font-size: larger;border-radius: 5em;">
-    Register
-   </button>
-  </div>
-
-<div class="forgot">
-  <a href="login"> Already have an account? Login </a>
-</div>
- </form>
+     <!-- Wyświetlanie logo -->
+     <img src="{% static 'images/logo.png' %}" alt="Logo" class="logo">
+     <!-- Wiadomość tworzenia konta -->
+     <p align="center" class="sign">Create Account</p>
+     <!-- Formularz rejestracji -->
+     <form class="form1" method="POST">
+         {% csrf_token %}
+         <!-- Wyświetlanie komunikatów o błędach, jeśli istnieją -->
+         {% if messages %}
+         <ul class="messages">
+             {% for message in messages %}
+             <li {% if message.tags %} class="{{ message.tags }}"{% endif %} style="color:rgba(225, 152, 0, 0.8);">{{ message }}</li>
+             {% endfor %}
+         </ul>
+         {% endif %}
+         <!-- Pole dla nazwy użytkownika -->
+         <input class="input-field" placeholder="Username" name="username" type="text" style="font-size: larger;border-radius: 5em;"/>
+         <!-- Pole dla adresu email -->
+         <input class="input-field" placeholder="Email" name="email" type="email" style="font-size: larger;border-radius: 5em;"/>
+         <!-- Pole dla hasła -->
+         <input class="input-field" placeholder="Password" name="password" type="password" style="font-size: larger; border-radius: 5em;"/>
+         <div style="margin-top: 10px;">
+             <!-- Przycisk rejestracji -->
+             <button align="center" class="submit" type="submit" style="font-size: larger;border-radius: 5em;">Register</button>
+         </div>
+         <div class="forgot">
+             <!-- Link do logowania -->
+             <a href="login">Already have an account? Login</a>
+         </div>
+     </form>
  </div>
  </body>
 </html>
